FIX: when using keyboard shortcuts, selections are visible now

--- a/assets/stylesheets/common/base/topic-list.scss
+++ b/assets/stylesheets/common/base/topic-list.scss
@@ -36,6 +36,12 @@
   border-style: solid;
   border-width: 1px;
 
+  tr.selected td {
+    &:nth-of-type(1), &.border--category {
+      box-shadow: -5px 0 0;
+    }
+  }
+
   th, td {
     border-color: $gray-lighter-SP;
     border-style: solid;
